Nov 01, 2007 - chris
o implemented zlib-based compression; a new function was added:
    ham_enable_compression()
o added a new option --disable-compression for configure; this option does not
    compile/link ham_enable_compression.

Nov 01, 2007 - chris
o added generic record filters - ham_add_record_filter and 
    ham_remove_record_filter
o added a new option --disable-encryption for configure; this option does not
    compile/link ham_env_enable_encryption.

Oct 28, 2007 - chris
o implemented AES encryption; a new function was added: 
	ham_env_enable_encryption()
o fixed bug in configure.in; on some systems, the call to getpagesize()
    was not declared correctly. i hope it works now.

Oct 26, 2007 - chris
o finished the C++ API in include/ham/hamsterdb.hpp and added two new C++
	samples - db6.cpp and env3.cpp.

Oct 21, 2007 - chris
o added generic page filters - ham_env_add_page_filter and 
	ham_env_remove_page_filter

Oct 18, 2007 - chris
o bugfix: when moving a cursor through duplicates and the cache was
	exhausted, an assert was triggered - fixed

Oct 16, 2007 - chris
o bugfix: ham_close in an environment could lead to a segmentation fault, 
	because the cache for extended keys was not properly set up, before
	it was deleted

Oct 11, 2007 - chris
o the default pagesize for unix databases is now 16kb, not 4kb; benchmarks 
    show that this is the fastest option, but still results in small files

Oct 10, 2007 - chris ---------------------------------------------------
                      release of hamsterdb-0.4.7

Oct 09, 2007 - chris
o restructured the wince MSV8 solution and project files

Oct 08, 2007 - chris
o completely recreated the win32 MSVC8 solution and project files

Oct 05, 2007 - chris
o added function ham_cursor_get_duplicate_count
o fixed a bug in coupling an uncoupling cursor: the duplicate id was lost
o added a new sample env2.c, which demonstrates a 1:n relationship for
    two tables (with the use of duplicate keys)
