@@ -1,3 +1,7 @@
+Nov 06, 2007 - chris
+o added a new function ham_env_get_database_names(), which returns all 
+	database names in an environment.
+
 Nov 01, 2007 - chris
 o implemented zlib-based compression; a new function was added:
     ham_enable_compression()
